# dload

./: .gitignore  AGENTS.md  BENCHMARKS.md  DESIGN.md  README.md  TUTORIAL.md  flake.nix  main.py  pyproject.toml
.github/workflows/: checks.yml  publish.yml
examples/: 01_commit_lab_data.py  02_public_dataset_recipe.py  03_stream_features.py  04_mix_augment.py  05_sliding_window_small_cache.py  06_torch_dataloader.py  07_versioning_pinning.py  08_cli_walkthrough.sh  09_combinators.py  10_derived_datasets.py  README.md  _env.py  _labtones.py
examples/bench/: b01_audio_streaming_bench.py  b02_text_tokenpack_bench.py  b03_sampling_strategies_bench.py  b04_vision_jpeg_bench.py
examples/training/: _common.py  t01_audio_classification.py  t02_image_classification.py  t03_char_language_model.py  t04_text_classification.py  t05_tabular_regression.py  t06_timeseries_forecast.py  t07_image_autoencoder.py  t08_contrastive_ssl.py  t09_noise_robust_audio.py  t10_recsys_matrix_factorization.py  t11_model_in_pipeline.py  t12_seq2seq_g2p.py
src/dload/: __init__.py  cache.py  cli.py  codecs.py  config.py  errors.py  manifest.py  pack.py  pipeline.py  remote.py  repo.py  torch.py
tests/: helpers.py  test_cache.py  test_cli.py  test_codecs.py  test_config.py  test_derive.py  test_manifest.py  test_pack.py  test_pipeline.py  test_remote.py  test_repo.py  test_torch.py
