[project]
# PyPI distribution name; the import stays `import dload` ("dload" was taken)
name = "dload-ml"
version = "0.1.0"
description = "Dataset management, storage, caching and streaming for ML training"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dmitrii Mukhutdinov", email = "flyingleafe@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.40",
    "click>=8.4.2",
    "msgpack>=1.2.1",
]

[project.urls]
Repository = "https://github.com/flyingleafe/dload"

[project.scripts]
dload = "dload.cli:main"

[dependency-groups]
# torch is deliberately NOT in dev: the pytorch wheel CDN is unreliable from
# CI, and only the torch adapter tests + examples need it. CI and the
# publish pipeline run torch-free (tests/test_torch.py skips itself, torch
# users are excluded from basedpyright). Locally: uv sync --group examples
dev = [
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "soundfile>=0.14.0",
]
examples = [
    "torch>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that talk to real R2 (need .env credentials)"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["src", "tests", "examples"]
# torch importers are unchecked while torch is out of the dev venv (see
# the dependency-groups note); drop these when torch returns to dev
exclude = [
    "src/dload/torch.py",
    "tests/test_torch.py",
    "examples/06_torch_dataloader.py",
    "examples/training",
    "examples/bench/b01_audio_streaming_bench.py",
    "examples/bench/b02_text_tokenpack_bench.py",
    "examples/bench/b04_vision_jpeg_bench.py",
]
